--- a/lec_03.tex
+++ b/lec_03.tex
@@ -162,7 +162,7 @@ Por \cite[\S III.4, Thm. 4.13.(iii), p. 147]{Hun1}, basta probar que los element
 Si $f \in \mathcal{A}$ es tal que $f(1) = 0$ y $f(p) \ne 0$ para alǵun primo $p$, entonces $f$ es irreducible en $\mathcal{A}$.
 \end{proposition}
 \begin{proof}
-Por hipótesis $f$ no es cero y no es unidad. Supongamos que $f=g*h$. Si $g$ y $h$ no fueran unidades, entonces se tendría que $g(1)=0$ y $f(1)=0$, por tanto, $f(1)=(g*h)(1)=g(1)h(p)+g(p)h(1)=0$, lo que contradice la hipótesis. En consecuencia alguna de las funciones $g$ o $h$ es unidad.
+Por hipótesis $f$ no es cero y no es unidad. Supongamos que $f=g*h$. Si $g$ y $h$ no fueran unidades se tendría que $g(1)=0$ y $h(1)=0$, por tanto, $f(p)=(g*h)(p)=g(1)h(p)+g(p)h(1)=0$, lo que contradice la hipótesis. En consecuencia alguna de las funciones $g$ o $h$ es unidad.
 \end{proof}
 
 Un colorario de la proposición anterior y el \Cref{cor:fac1} es el siguiente.
