--- a/lec_04.tex
+++ b/lec_04.tex
@@ -1,4 +1,4 @@
-%%% Algunas funciones aritmeticas
+%%% Algunas funciones
 \newpage
 \subsection{Algunas funciones aritméticas conocidas}
 
@@ -32,7 +32,7 @@ Para cada $k\in\mathbb{C}$ se define la función divisor de orden $k$ como
 \begin{equation*}
 	\sigma_k(n)=\sum_{d \mid n} d^k.
 \end{equation*}
-A la función divisor de orden $1$ la llamaremos simplemente función divisor y se denotará como $\sigma$ en vez de $\sigma_1$. La función divisor de orden $0$ se denomina función número de divisores.
+A la función divisor de orden $1$ la llamaremos simplemente función divisor y se denotará como $\sigma$ en vez de $\sigma_1$. La función divisor de orden $0$ se denomina función número de divisores y se denota $d$.
 \end{definition}
 
 Las funciones aritméticas por sí mismas pueden tener comportamientos aleatorios y difíciles de predecir, pero se pueden observar algunas regularidades cuando sumamos todos los valores que toma la función en los divisores positivos de un número natural dado. Para esto definimos la siguiente notación:
