--- a/bibliography.bib
+++ b/bibliography.bib
@@ -81,3 +81,35 @@
     volume = "17",
     pages = "249-260"
 }
+@article{Bell2,
+    author = "E. T. Bell",
+    title = "Arithmetic of logic",
+    journal = "Transactions of the American Mathematical Society",
+    year = "1927",
+    volume = "29",
+    number = "3",
+    pages = "597-611"
+}
+@book{Knopf1,
+    author = "John Knopfmacher",
+    title = "Abstract Analytic Number Theory",
+    publisher = "North-Holland Publishing Company",
+    year = "1975",
+    volume = "12"
+}
+@article{Knopf2,
+  title = "Fourier analysis of arithmetical functions",
+  author = "John Knopfmacher",
+  journal = "Annali di Matematica Pura ed Applicata",
+  year = "1976",
+  volume = "109",
+  pages = "177-201"
+}
+@article{Rea1,
+    author = {David Francis Rearick},
+    title = {Operators on algebras of arithmetic functions},
+    journal = {Duke Mathematical Journal},
+    year = {1968},
+    volume = {35},
+    pages = {761-766}
+}
